--- a/src/app/dp-logo/dp-logo.component.html
+++ b/src/app/dp-logo/dp-logo.component.html
@@ -1,1 +1,3 @@
-<p>dp-logo works!</p>
+<div class="profile-logo" [ngStyle]="logoStyles">
+  <img [ngStyle]="imgStyle" src="assets/img/Profile-Pic-6.jpg" alt="my pic" />
+</div>
