--- a/src/app/key-skill-btns/key-skill-btns.component.html
+++ b/src/app/key-skill-btns/key-skill-btns.component.html
@@ -1,1 +1,9 @@
-<p>key-skill-btns works!</p>
+<div class="key-skills">
+  <button class="key-skill"
+    *ngFor="let keySkill of keySkills"
+    (click)="toogleSkillSelection(keySkill)"
+    [disabled]="disableIfOneBtn(keySkill)"
+    [ngClass]="{'key-skill--disabled':!keySkill.isSelected}">
+    {{keySkill.displayName}}
+  </button>
+</div>
