--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,1 +1,36 @@
-<p>landing-page works!</p>
+<div class="overlay"></div>
+<div class="root-container">
+  <div class="navbar">
+    <div class="nav-items">
+      <a [routerLink]="['/portfolio']" class="nav-item">Portfolio</a>
+      <a [routerLink]="['/about']" class="nav-item">About & Skills</a>
+      <a [routerLink]="['/profiles']" class="nav-item">Profiles</a>
+    </div>
+  </div>
+
+  <div class="container">
+    <app-dp-logo class="dp-logo"></app-dp-logo>
+    <h4 class="short-bio">Student | Developer | Contributor</h4>
+
+    <q class="quote">Life is Binarry between Zero and One.</q>
+    <div class="name">
+      <p>
+        Md Irfanul Alam
+      </p>
+      <div class="strip"></div>
+    </div>
+
+    <span (click)="onExploreMeClick()" (mouseover)="startTadaAnimation = false" [ngClass]="{'tada-animation':startTadaAnimation}">
+      <button class="special-btn">
+        <span>
+          Explore Me
+        </span>
+      </button>
+    </span>
+
+    <div class="stick">
+      <div class="stick-design"></div>
+    </div>
+  </div>
+
+</div>
