--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,7 @@
-<p>profile works!</p>
+<div @animate>
+  <app-navigator
+    *ngIf="showNavigationMenu"
+    (cancellation)="showNavigationMenu = false"
+  ></app-navigator>
+</div>
+<app-landing-page (ExploreMe)="showNavigationMenu = true"></app-landing-page>
